--- a/_posts/2020-02-24-number.md
+++ b/_posts/2020-02-24-number.md
@@ -21,9 +21,9 @@ console.log(0 / "말도 안 되는 값");
 수학적으로 무한대를 의마하는 Infinity는 다른 어떤 수보다 가장 큰 수를 뜻 합니다.  
 NaN이란 "Not a number"라는 뜻으로, 산술 연산의 결과가 유효하지 않은 값 또는 숫자가 너무 커서 표현할 수 없는 값일 때 NaN으로 표현됩니다.  
 
-- 1: 콘솔 로그에서는 Infinity는 값 그대로 출력
+- 1: 콘솔 로그에서는 Infinity는 값 그대로 출력합니다.
 - 2: Infinity로 나누면 무슨 값이든 0이 됩니다.
-- 4~5: 유효하지 않은 수식인 경우, 연산의 결과 NaN이 된다.
+- 4~5: 유효하지 않은 수식인 경우, 연산의 결과 NaN이 됩니다.
 
 ```
 Infinity
